tests/algorithms/x/Java/conversions/octal_to_hexadecimal.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden139_octal_to_hexadecimal1856018632/001/Main.java:24: error: incompatible types: String cannot be converted to int
            int d = s.substring(k, k+1);
                               ^
1 error
